<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Manga Control</string>
    <string name="title_section1">Control de Series</string>
    <string name="title_section2">Control de Tomos</string>
    <string name="title_section3">Control de Editoriales</string>
    <string name="title_section4">Lista de la compra</string>
    <string name="title_section5">Copia de Seguridad Base de Datos</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="strAddSerie">Añadir Serie</string>
    <string name="strAddEditorial">Añadir Editorial</string>
    <string name="txtNombreEditorial">Nombre de la editorial:</string>
    <string name="ctxOptionEditEditorial">Editar Editorial</string>
    <string name="ctxOptionDeleteEditorial">Eliminar Editorial</string>
    <string name="txtEditorialCreadaOK">Editorial creada satisfactoriamente</string>
    <string name="txtEditorialModificadaOK">Editorial modificada satisfactoriamente</string>
    <string name="txtErrorNombreEditorialNulo">El nombre de editorial no puede ser nulo</string>
    <string name="strEditEditorial">Editar Editorial</string>
    <string name="txtNombreSerie">Nombre de la serie</string>
    <string name="txtEditorial">Editorial:</string>
    <string name="txtEstado">Estado de la Serie:</string>
    <string name="rdbtnSerieAbierta">Serie Abierta</string>
    <string name="rdbtnSerieCerrada">Serie Cerrada</string>
    <string name="txtNumeroVolumenes">Número de Volúmenes</string>
    <string name="txtEstadoColeccion">Estado de la colección:</string>
    <string name="btnAddSerie">Añadir Serie</string>
    <string name="txtDoBackup">Crear Copia de Seguridad de la Base de Datos</string>
    <string name="txtSerie">Serie:</string>
    <string name="txtTomoUnico">Tomo único:</string>
    <string name="txtVariosTomos">Tomos del:</string>
    <string name="txtVariosTomosAl">al:</string>
    <string name="txtAddTomos">Añadir Tomos</string>
    <string name="errSinNombreSerie">Es necesario indicar el nombre de la serie.</string>
    <string name="errSinEditorial">Es necesario escoger una editorial.</string>
    <string name="errSinEstadoSerie">Es necesario escoger un estado de publicación de la serie.</string>
    <string name="errSinNumVol">Es necesario añadir el número de volúmenes publicados hasta la fecha.</string>
    <string name="errSinEstadoColeccion">Es necesario indicar el estado de la colección de esta serie.</string>
    <string name="txtBtnComprar">Comprar</string>
    <string name="txtTomo">Tomo:</string>
    <string name="ctxOptionDeleteSerie">Eliminar Serie</string>
    <string name="ctxOptionEditSerie">Editar Serie</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txtTomoComprado">Tomo Comprado</string>
    <string name="txtTomoPorComprar">Comprar Tomo</string>
    <string name="action_search">Search</string>
    <string name="txtGenero">Genero</string>
    <string name="errSinGenero">Es necesario escoger un género.\n</string>
    <string name="txtLitNumSeries">Número de series</string>
    <string name="txtLitNumEditoriales">Número de editoriales</string>
    <string name="txtLitTotalTomos">Total de Tomos:</string>
    <string name="txtLitEditMasTomos">Editorial con más tomos:</string>
    <string name="txtLitGeneroMasTomos">Género con más Tomos:</string>
    <string name="txtLitSerieMasLarga">Serie más larga:</string>
    <string name="title_section6">Estadísticas</string>
    <string name="txtBlankString" />
    <string name="txtLoadBackUp">Cargar Copia de Seguridad de la Base de Datos</string>
    <string name="about">Acerca de...</string>
    <string name="txtAppDescription">Aplicación para el control de mangas, series, y demás libros coleccionables</string>
    <string name="notYetImplemented">Aún por implementar</string>
    <string name="txtNombreOriginalSerie">Nombre Original de la Serie</string>
    <string name="title_section7">Control de Autores</string>
    <string name="tomo_modificado_ok"> tomos modificados correctamente</string>
    <string name="serie_creada_ok">Creada satisfactoriamente la serie: </string>
    <string name="serie_modificada_ok">Modificada satisfactoriamente la serie: </string>
    <string name="filas_borradas_ok">filas borradas satisfactoriamente</string>
    <string name="resultado_final">Resultado final:</string>
    <string name="series_borradas"> series borradas.</string>
    <string name="tomos_borrados"> tomos borrados.</string>
    <string name="copia_seguridad_ok">Copia de Seguridad realizada correctamente</string>
    <string name="copia_seguridad_ko">No se ha podido realizar la copia de seguridad</string>
    <string name="carga_backup_ok">Copia de Seguridad cargada correctamente</string>
    <string name="carga_backup_ko_no_file">No se ha encontrado el fichero de copia de seguridad</string>
    <string name="carga_backup_ko">No se ha podido cargar la copia de seguridad</string>
    <string name="tomos_comprados_ok"> tomos comprados satisfactoriamente</string>
    <string name="confirmacion_eliminar_tomos">Esto supondrá eliminar tomos de base de datos. ¿Está seguro?</string>
    <string name="aceptar">Aceptar</string>
    <string name="cancelar">Cancelar</string>
    <string name="confirmacion_insertar_tomos">Esto supondrá insertar tomos en base de datos. ¿Está seguro?</string>
    <string name="confirmacion_editar_a_pelo">¿Editar serie con estos valores?</string>
    <string name="editar_serie">Editar Serie</string>
    <string name="btnAddAutor">Añadir Autor</string>
    <string name="txtNombreAutor">Nombre del/la Autor/a</string>
    <string name="hintNombreAutor">Nombre</string>
    <string name="txtEditAutor">Editar Autor/a</string>
    <string name="ctxEditAutor">Editar Autor/a</string>
    <string name="ctxDeleteAutor">Eliminar Autor/a</string>
    <string name="authorUpdateSuccess">Author successfully updated:</string>
    <string name="authorUpdateFailure">Something went wrong while updating author:</string>
    <string name="updateAuthorMessage">Update author with these values?</string>
</resources>
