<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtNombreSerie"
        android:id="@+id/txtNombreSerie"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/edtNombreSerie"
        android:layout_below="@+id/txtNombreSerie"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:inputType="text"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtNombreOriginalSerie"
        android:id="@+id/txtNombreOriginalSerie"
        android:layout_below="@+id/edtNombreSerie"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/edtNombreOriginalSerie"
        android:layout_below="@+id/txtNombreOriginalSerie"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:inputType="text"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtEditorial"
        android:id="@+id/txtEditorial"
        android:layout_below="@+id/edtNombreOriginalSerie"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true" />

    <Spinner
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spnEditorial"
        android:layout_below="@+id/txtEditorial"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtGenero"
        android:id="@+id/txtGenero"
        android:layout_below="@+id/spnEditorial"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true" />

    <Spinner
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spnGenero"
        android:layout_below="@+id/txtGenero"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtEstado"
        android:id="@+id/txtEstado"
        android:layout_below="@+id/spnGenero"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true" />

    <RadioGroup
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtEstado"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:orientation="horizontal"
        android:id="@+id/radGroupSerie">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rdbtnSerieAbierta"
            android:id="@+id/rdbtnSerieAbierta"
            />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rdbtnSerieCerrada"
            android:id="@+id/rdbtnSerieCerrada"
            />

    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtNumeroVolumenes"
        android:id="@+id/txtNumeroVolumenes"
        android:layout_below="@+id/radGroupSerie"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/edtNumeroVol"
        android:layout_below="@+id/txtNumeroVolumenes"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtEstadoColeccion"
        android:id="@+id/txtEstadoColeccion"
        android:layout_below="@+id/edtNumeroVol"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true" />

    <Spinner
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spnEstadoCol"
        android:layout_below="@+id/txtEstadoColeccion"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnAddSerie"
        android:id="@+id/btnAddSerie"
        android:layout_below="@+id/spnEstadoCol"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true" />
</RelativeLayout>